@@ -13,6 +13,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/api/metadata")
@@ -41,7 +42,7 @@ public class WhoisMetadataController extends ApiController {
                         hasJustLongFlag ? flag : "",
                         f.getDescription());
             }
-        }).toList());
+        }).collect(Collectors.toList()));
     }
 
 
